<resources>
    <string name="app_name">Goldfisch</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="EinkaufswagenButton">Button</string>
    <string name="einstellungenButton">Button</string>
    <string name="trophaenButton">Button</string>
    <string name="einkaufswagen_button">einkaufswagen Button</string>
    <string name="trophaen_button">Trophaen Button</string>
    <string name="einstellungs_button">Einstellungs Button</string>
    <string name="textview">TextView</string>
    <string name="button_teich_bild">Button Teich Bild</string>
    <string name="button_erfolge_bild">button_erfolge_bild</string>
    <string name="button_tipps_bild">button_tipps_bild</string>
    <string name="_25">25%</string>
    <string name="krei_bild">krei bild</string>
    <string name="weisses_bild_vom_kreis">weisses Bild vom kreis</string>
    <string name="trinkbecher_ohne_hintergrund">Trinkbecher ohne Hintergrund</string>
    <string name="ein_bild_vom_glas">ein Bild vom Glas</string>
    <string name="tipps">TIPPS</string>
    <string name="erfolge">ERFOLGE</string>
    <string name="teich">TEICH</string>
    <string name="erfolg">ERFOLG</string>
    <string name="hello_world">Hello World</string>
    <string name="einbild">einbild</string>
    <string name="firstimage">firstImage</string>
    <string name="radiobutton">RadioButton</string>
    <string name="hallo">hallo</string>
    <string name="testtext">testtext</string>
    <string name="_250ml">250ml</string>
    <string name="_330ml">330ml</string>
    <string name="_500ml">500ml</string>
    <string name="das_ist_ein_bild_vom_infobutton">das ist ein bild vom infobutton</string>
    <string name="i">i</string>
    <string name="das_ist_ein_homebutton">das ist ein HomeButton</string>
    <string name="gesundheitstipps">Gesundheitstipps</string>
    <string name="homebutton">homebutton</string>
    <string name="das_ist_ein_bild_von_share">das_ist_ein_bild_von_share</string>
    <string name="tipps1">TIPPS</string>
    <string name="teich1">TEICH</string>
    <string name="erfolge1">ERFOLGE</string>
	 <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
	<string name="gesundheitstipp">TextView</string>
    <string name="ueberschrift1">TextView</string>
    <string name="homebutton_der_erfolgeseite">Homebutton der Erfolgeseite</string>
    <string name="erfolge12">Erfolge</string>
    <string name="das_ist_ein_bronze_stern">Das ist ein Bronze Stern</string>
    <string name="titan_stern_erfolg">Titan Stern Erfolg</string>
    <string name="das_ist_ein_silbener_stern">Das ist ein Silbener Stern</string>
    <string name="das_ist_ein_goldener_stern">Das ist ein goldener Stern</string>
    <string name="das_ist_ein_titanstern_bild">Das ist ein TitanStern Bild</string>
    <string name="das_sind_2_sternne_ineinander_titanbild1">Das sind 2 Sternne ineinander TitanBild1</string>
    <string name="das_sind_2_sternne_ineinander_titanbild2">Das sind 2 Sternne ineinander TitanBild2</string>
    <string name="bronze_stern_trinke_250_einheiten_der_330ml_menge">Bronze Stern: Trinke 250 Einheiten der 330ml Menge</string>
    <string name="bronze_stern_erhalten_trinke_250_einheiten">Bronze Stern: Erhalten Trinke 250 Einheiten</string>
    <string name="silber_stern_erhalten_trinke_500_einheiten">Silber Stern: Erhalten Trinke 500 Einheiten</string>
    <string name="gold_stern_erhalten_trinke_1000_einheiten">Gold Stern: Erhalten Trinke 1000 Einheiten</string>
    <string name="titan_stern_offen_besitze_5_fische">Titan Stern: Offen Besitze 5 Fische</string>
    <string name="titan_stern_offen_besitze_10_fische">Titan Stern: Offen Besitze 10 Fische</string>
	<string name="fishbutton_home_von_der_fishshopseite">fishbutton_home_von der_fishshopSeite</string>
	<string name="fish1">fish1</string>
    <string name="fish2">fish2</string>
    <string name="fish3">fish3</string>
    <string name="fish4">fish4</string>
	<string name="wasser_330ml">Wasser : 330ml</string>
	 <string name="homebuttonstatistik">HomeButtonStatistik</string>
	<string name="statistik">Statistik</string>
    <string name="text_statistik">text_statistik</string>
	<string name="homebutton_f_r_die_fishstatus_seite">homebutton_f_r_die_fishstatus_seite</string>
    <string name="aktueller_status">Aktueller Status</string>
    <string name="ein_bild_von_einem_fisch_f_r_den_fischstatus">ein_bild_von_einem_fisch_f_r_den_fischstatus</string>
    <string name="sie_haben_bereits_2222ml_wasser_getrunken_ihnen_fehlen_noch_778ml_um_ihren_gesamten_bedarf_zu_decken">sie_haben_bereits_2222ml_wasser_getrunken_ihnen_fehlen_noch_778ml_um_ihren_gesamten_bedarf_zu_decken</string>
	<string name="troph_en">Trophäen</string>
	<string name="bronze_stern_offen_trinke_250_einheiten">Bronze Stern: Offen Trinke 250 Einheiten</string>
    <string name="silber_stern_offen_trinke_500_einheiten">Silber Stern: Offen Trinke 500 Einheiten</string>
    <string name="gold_stern_offen_trinke_1000_einheiten">Gold Stern: Offen Trinke 1000 Einheiten</string>
	<string name="statistik2">STATISTIK</string>
	<string name="gold_stern_offen_trinke_1000_einheiten1">Gold Stern: Offen Trinke 1000 Einheiten</string>
    <string name="gold_stern_offen_trinke_1000_einheiten2">Gold Stern: Offen Trinke 1000 Einheiten2</string>
    <string name="gold_stern_offen_trinke_1000_einheiten23">Gold Stern: Offen      Trinke 1000 Einheiten</string>
    <string name="goldener_stern_offen_trinke_1000_einheiten4">Goldener Stern: Offen Trinke 1000 Einheiten</string>
	<string name="amount">amount</string>
    <string name="glas2">glas2</string>
    <string name="glas3">glas3</string>
    <string name="tutorial_menue">tutorial_menue</string>
    <string name="das_ist_eine_tutorial_bild">das ist eine Tutorial Bild</string>

    <!-- fuer spinner Intervall in einstellungen -->
    <string-array name="intervallArray">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>ganz aus</item>
    </string-array>


</resources>
