<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="100dp"
        android:id="@+id/bargrapf"></com.github.mikephil.charting.charts.HorizontalBarChart>

    <ImageButton
        android:id="@+id/homebuttonStatistik"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/homebuttonstatistik"
        app:srcCompat="@drawable/home4" />

    <TextView
        android:id="@+id/statistik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homebuttonStatistik"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/text_statistik"
        android:text="@string/statistik"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />


</RelativeLayout>