<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/homeButtonFishStatus"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"

        android:contentDescription="@string/homebutton_f_r_die_fishstatus_seite"
        app:srcCompat="@drawable/home4" />


    <TextView
        android:id="@+id/UeberschriftFishstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeButtonFishStatus"
        android:layout_centerHorizontal="true"
        android:text="@string/aktueller_status"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/FishImageFishStatus"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_below="@+id/UeberschriftFishstatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/ein_bild_von_einem_fisch_f_r_den_fischstatus"
        app:srcCompat="@drawable/redfish55" />

    <ProgressBar
        android:id="@+id/FishStatusBar"
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:max="100"
        android:progress="50"
        android:layout_marginTop="23dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_below="@+id/FishImageFishStatus"
        android:layout_centerHorizontal="true"
        android:progressDrawable="@drawable/progress_drawable_blue"/>

    <TextView
        android:id="@+id/FishstatusInfoText"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/FishStatusBar"
        android:text="@string/sie_haben_bereits_2222ml_wasser_getrunken_ihnen_fehlen_noch_778ml_um_ihren_gesamten_bedarf_zu_decken"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>