<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="at.ac.univie.hci.goldfisch.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_page"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:fadingEdge="vertical" />

    <ImageView
        android:id="@+id/amountglass1"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:contentDescription="@string/firstimage"
        app:srcCompat="@drawable/amountt"
        android:layout_marginStart="36dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/amountglass2"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:contentDescription="@string/firstimage"
        app:srcCompat="@drawable/amountt"
        android:layout_alignBottom="@+id/amountglass1"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/amountglass3"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:contentDescription="@string/firstimage"
        app:srcCompat="@drawable/amountt"
        android:layout_marginEnd="16dp"
        android:layout_alignBottom="@+id/amountglass2"
        android:layout_alignParentEnd="true" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_250ml"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:layout_above="@+id/radioButton"
        android:layout_alignStart="@+id/amountglass1"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="8dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/_330ml"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/amountglass2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/_500ml"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/amountglass3"
        android:layout_alignStart="@+id/amountglass3"
        android:layout_marginStart="19dp" />
    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        tools:ignore="RelativeOverlap,RtlHardcoded"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="4dp"
        android:layout_alignStart="@+id/textView" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="4dp"
        tools:ignore="RtlHardcoded" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="6dp"
        android:layout_alignBaseline="@+id/radioButton2"
        android:layout_alignBottom="@+id/radioButton2"
        android:layout_alignEnd="@+id/textView3" />

</RelativeLayout>
